# game-rs

./: Cargo.toml  LICENSE  README.md  flake.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.github/workflows/: cachix.yml  rust.yml
lib_reflect/: .gitignore  Cargo.toml
lib_reflect/src/: lib.rs
src/: config.rs  download.rs  import.rs  main.rs  runner.rs
src/config/: config.rs  config2.rs  extra.rs  extra_config.rs  game.rs  menu.rs  mod.rs  util.rs
src/download/: mod.rs  proton.rs  util.rs
