[package]
name = "game-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
confy = "0.5.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_derive = "1.0.152"
