[package]
name = "game-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
confy = "0.5.1"
console = "0.15.5"
dialoguer = { version = "0.10.3", features = ["fuzzy-select"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_derive = "1.0.152"
serde_json = "1.0.91"
ureq = { version = "2.6.2", features = ["json"] }

[features]
nixos = []
