[package]
name = "game-rs"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib_reflect = { path = "./lib_reflect" }
clap = { version = "4.1.4", features = ["derive"] }
confy = "0.5.1"
console = "0.15.5"
dialoguer = { version = "0.10.3", features = ["fuzzy-select"] }
eyre = "0.6.8"
serde = { version = "1.0.152", features = ["derive"] }
serde_derive = "1.0.152"
serde_json = "1.0.91"
serde_yaml = "0.9.17"
tar = "0.4.38"
ureq = { version = "2.6.2", features = ["json"] }
serde-aux = "4.1.2"
enum-iterator = "1.4.0"
flate2 = "1.0.28"
indicatif = "0.17.8"

[features]
nixos = []
